# terraform-mongodbatlas-cluster

./: .env.example  .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .terraform-versions.yaml  .tflint.hcl  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  IMPROVEMENTS.md  README.md  data_cluster_read.tf  go.mod  justfile  main.tf  name.tf  output.tf  variables_module.tf  variables_resource.tf  versions.tf
.github/: CODEOWNERS  __init__.py  config_loader.py  dependabot.yml  dev_vars.py  doc_utils.py  examples_readme.py  generate_inputs_from_readme.py  generate_inputs_from_readme_test.py  md_link_absolute.py  pr-labeler.yml  pyproject.toml  release_notes.py  root_readme.py  sdlc.src.yaml  submodule_readme.py  submodule_readme_test.py  test_compat.py  tf_registry_source.py  update_version.py  validate_version.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/changelog/: __init__.py  build_changelog.py  build_changelog_test.py  check_changelog_entry_file_test.py  generate_release_body.py  generate_release_body_test.py  release-note.tmpl  update_changelog_version.py  update_changelog_version_test.py
.github/destination_scaffold/: examples.yaml
.github/dev/: .gitignore  __init__.py  dev_vars.py  extract_regions.py  test_compat.py  update_terraform_versions.py
.github/docs/: __init__.py  config_loader.py  doc_utils.py  doc_utils_test.py  examples_readme.py  examples_readme_test.py  generate_inputs_from_readme.py  generate_inputs_from_readme_test.py  md_link_absolute.py  root_readme.py  root_readme_test.py  submodule_readme.py  (+1 more)
tests/: main.tf  (+17 more)
(+339 files in other folders)
