[project]
name = "module-github-scripts"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic",
    "pyyaml",
    "typer",
    "pytest",
    "pytest-regressions",
]

[project.scripts]
tf-gen = "tf_gen.cli:app"

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["*_test.py"]
